samples/_failures_safe/1761795305_fd92bd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_78cbf900.c: In function ‘main’:
./samples/SAFE/__tmp_78cbf900.c:155:17: error: expected expression at end of input
  155 |                 if (status ==
      |                 ^~
./samples/SAFE/__tmp_78cbf900.c:155:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_78cbf900.c:155:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_78cbf900.c:155:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_78cbf900.c:155:17: error: expected declaration or statement at end of input
